# ffplayout

./: .eslintrc.js  .gitignore  .gitmodules  .ignore  .prettierrc  .pylintrc  .sql-formatter.json  2018-01-01.xml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  README.md  app.vue  build_all.sh  cross_compile_all.sh  error.vue  eslint.config.mjs  ffplayout.conf  ffplayout.py  ffplayout.service  ffplayout.yml  functions.php  gen_playlist_from_subfolders.sh  index.html  install.sh  live.txt  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  requirements-base.txt  requirements.txt  tailwind.config.ts  test.html  tsconfig.json  vite.config.ts
backend/app/: Cargo.toml  build.rs
backend/app/examples/: flexi3.rs
backend/app/src/: lib.rs  main.rs
backend/app/src/api/: auth.rs  file_access.rs  mod.rs  path.rs  state.rs
backend/app/src/db/: mod.rs  models.rs
backend/app/src/file/: local.rs  mod.rs  upload.rs  watcher.rs
backend/app/src/middleware/: governor.rs
backend/app/src/player/: controller.rs  mod.rs
backend/app/src/serve/: routes.rs
backend/app/src/sse/: broadcast.rs
backend/app/src/utils/: args_parse.rs  channels.rs  config.rs  control.rs  errors.rs  generator.rs  logging.rs  mail.rs  mod.rs  playlist.rs  system.rs  task_runner.rs  text.rs  time_machine.rs
backend/engine/: Cargo.toml
backend/engine/benches/: overlay_blend.rs
backend/engine/examples/: playout.rs
backend/engine/src/: benchmark.rs  lib.rs  playout.rs
backend/engine/src/analysis/: audio_level.rs  mod.rs
backend/engine/src/audio_mixer/: control.rs  effects.rs  (+2 more)
engine/: Cargo.toml  build.rs
engine/examples/: flexi2.rs  mock_time.rs  test_buffer.rs
engine/src/: lib.rs  main.rs
engine/src/api/: auth.rs  mod.rs  path.rs  routes.rs  state.rs
engine/src/db/: handles.rs  mod.rs  models.rs
engine/src/file/: local.rs  mod.rs  s3.rs  upload.rs  watcher.rs
engine/src/macros/: mod.rs
engine/src/middleware/: mod.rs
engine/src/player/: controller.rs  mod.rs
engine/src/serve/: routes.rs
engine/src/sse/: broadcast.rs  mod.rs  routes.rs
engine/src/utils/: advanced_config.rs  args_parse.rs  channels.rs  config.rs  control.rs  errors.rs  files.rs  generator.rs  logging.rs  mail.rs  mod.rs  playlist.rs  s3_utils.rs  system.rs  task_runner.rs  time_machine.rs
ffplayout/: Cargo.toml  TODO.md  build.rs  db.sqlite3  filters.py  folder.py  ingest_server.py  manage.py  playlist.py  requirements.txt  utils.py
ffplayout-api/: Cargo.toml  README.md  build.rs
ffplayout-api/examples/: index.html  sse.rs  stat.rs  system_i.rs  uuid_auth.rs
ffplayout-api/src/: lib.rs  main.rs
ffplayout-api/src/api/: auth.rs  routes.rs
ffplayout-api/src/db/: handles.rs  mod.rs  models.rs
ffplayout-api/src/sse/: broadcast.rs  mod.rs  routes.rs
ffplayout-api/src/utils/: args_parse.rs  auth.rs  channels.rs  control.rs  errors.rs  files.rs  handles.rs  mod.rs  models.rs  playlist.rs  routes.rs  system.rs
ffplayout-engine/: Cargo.toml  README.md
ffplayout-engine/src/: lib.rs  main.rs
ffplayout-engine/src/input/: folder.rs  ingest.rs  mod.rs  playlist.rs
ffplayout-engine/src/output/: desktop.rs  hls.rs  mod.rs  null.rs  stream.rs
ffplayout-engine/src/rpc/: mod.rs  server.rs  zmq_cmd.rs
ffplayout-engine/src/tests/: mod.rs
ffplayout-engine/src/utils/: arg_parse.rs  mod.rs  task_runner.rs
ffplayout/api/: admin.py  models.py  serializers.py  utils.py  views.py
ffplayout/api/migrations/: 0001_initial.py  0002_auto_20200415_1232.py  0002_messengepresets.py
ffplayout/api_player/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
ffplayout/apps/api_player/: admin.py  apps.py  db.py  models.py  serializers.py  settings.py  urls.py  utils.py  views.py
ffplayout/config/: README.md  argparse_volume.yml
ffplayout/examples/: flexi.rs  flexi2.rs  flexi3.rs  multi_log.rs
ffplayout/ffplayout/: asgi.py  settings.py  urls.py  wsgi.py
ffplayout/ffplayout/settings/: common.py  development.py  production.py
ffplayout/filter/: README.md  v_drawtext.py
ffplayout/filters/: README.md  a_volume.py  default.py  v_drawtext.py
ffplayout/frontend/: README.md  nuxt.config.js  package-lock.json  package.json
ffplayout/frontend/components/: Login.vue  Menu.vue  VideoPlayer.vue
ffplayout/frontend/layouts/: default.vue
ffplayout/frontend/middleware/: auth.js
ffplayout/frontend/pages/: configure.vue  control.vue  index.vue  logging.vue  media.vue  message.vue  player.vue
ffplayout/frontend/plugins/: axios.js  filters.js  helpers.js  loading.js  scrollbar.js
ffplayout/frontend/store/: auth.js  config.js  index.js  media.js  playlist.js
ffplayout/output/: README.md  desktop.py  hls.py  live_switch.py  nopre.py  null.py  stream.py
ffplayout/player/: Readme.md  folder.py  playlist.py
ffplayout/src/: lib.rs  main.rs
ffplayout/src/api/: auth.rs  mod.rs  routes.rs
ffplayout/src/db/: handles.rs  mod.rs  models.rs
ffplayout/src/player/: controller.rs  mod.rs
ffplayout/src/sse/: broadcast.rs  routes.rs
ffplayout/src/utils/: advanced_config.rs  args_parse.rs  channels.rs  config.rs  control.rs  errors.rs  files.rs  generator.rs  logging.rs  mod.rs  playlist.rs  system.rs  task_runner.rs
lib/: Cargo.toml  README.md
lib/src/: lib.rs
lib/src/filter/: a_loudnorm.rs  custom.rs  custom_filter.rs  ingest_filter.rs  mod.rs  v_drawtext.rs  v_overlay.rs
lib/src/tests/: mod.rs
lib/src/utils/: advanced_config.rs  config.rs  controller.rs  errors.rs  folder.rs  generator.rs  import.rs  json_serializer.rs  json_validate.rs  logging.rs  mod.rs  windows.rs
tests/: Cargo.toml  run_multiple_tests.py  run_playlist.py  run_time_machine.py  run_time_warp.py  test_filters.py  test_playlist.py  test_utils.py
tests/assets/: dual_audio_vtt.mkv  playlist_full.json
tests/assets/media_mix/: dual_audio_vtt_1.mkv  subtitle.vtt  video_audio_vtt.mkv
tests/assets/playlists/: playlist_full.json  playlist_short.json  playlist_sorted.json
tests/src/: api_routes.rs  engine_cmd.rs  engine_filter.rs  engine_generator.rs  engine_playlist.rs  lib_utils.rs  utils.rs
(+516 files in other folders)
