[workspace]
members = ["ffplayout", "tests"]
default-members = ["ffplayout", "tests"]
resolver = "2"

[workspace.package]
version = "0.24.0-alpha1"
license = "GPL-3.0"
repository = "https://github.com/ffplayout/ffplayout"
authors = ["Jonathan Baecker <jonbae77@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = true
