[workspace]
members = ["engine", "tests"]
resolver = "2"

[workspace.package]
description = "24/7 playout based on rust and ffmpeg"
readme = "README.md"
version = "0.24.3"
license = "GPL-3.0"
repository = "https://github.com/ffplayout/ffplayout"
authors = ["Jonathan Baecker <jonbae77@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = true
