[package]
name = "ffplayout-api"
description = "Rest API for ffplayout"
license = "GPL-3.0"
authors = ["Jonathan Baecker jonbae77@gmail.com"]
readme = "README.md"
version = "0.8.0"
edition = "2021"

[dependencies]
ffplayout-lib = { path = "../lib" }
actix-files = "0.6"
actix-multipart = "0.4"
actix-web = "4"
actix-web-grants = "3"
actix-web-httpauth = "0.6"
argon2 = "0.4"
chrono = "0.4"
clap = { version = "3.2", features = ["derive"] }
derive_more = "0.99"
faccess = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
jsonwebtoken = "8"
once_cell = "1.10"
rand = "0.8"
regex = "1"
relative-path = "1.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rpassword = "6.0"
sanitize-filename = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
simplelog = { version = "^0.12", features = ["paris"] }
sqlx = { version = "0.6", features = [
    "runtime-actix-native-tls",
    "sqlite"
] }

[[bin]]
name = "ffpapi"
path = "src/main.rs"
