[package]
name = "ffplayout"
description = "24/7 playout based on rust and ffmpeg"
license = "GPL-3.0"
authors = ["Jonathan Baecker jonbae77@gmail.com"]
readme = "README.md"
version = "0.13.0"
edition = "2021"

[dependencies]
ffplayout-lib = { path = "../lib" }
clap = { version = "3.2", features = ["derive"] }
crossbeam-channel = "0.5"
futures = "0.3"
jsonrpc-http-server = "18.0"
notify = "4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = { version = "^0.12", features = ["paris"] }
zeromq = { git = "https://github.com/zeromq/zmq.rs.git", default-features = false, features = [
    "async-std-runtime",
    "tcp-transport"
] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "ffplayout"
path = "src/main.rs"

# DEBIAN DEB PACKAGE
[package.metadata.deb]
name = "ffplayout"
priority = "optional"
section = "net"
license-file = ["../LICENSE", "0"]
depends = ""
suggests = "ffmpeg"
copyright = "Copyright (c) 2022, Jonathan Baecker. All rights reserved."
conf-files = ["/etc/ffplayout/ffplayout.yml"]
assets = [
    ["../target/x86_64-unknown-linux-musl/release/ffpapi", "/usr/bin/", "755"],
    [
        "../target/x86_64-unknown-linux-musl/release/ffplayout",
        "/usr/bin/",
        "755"
    ],
    ["../assets/ffpapi.service", "/lib/systemd/system/", "644"],
    ["../assets/ffplayout.service", "/lib/systemd/system/", "644"],
    ["../assets/ffplayout@.service", "/lib/systemd/system/", "644"],
    ["../assets/11-ffplayout", "/etc/sudoers.d/", "644"],
    ["../assets/ffplayout.yml", "/etc/ffplayout/", "644"],
    ["../assets/logo.png", "/usr/share/ffplayout/", "644"],
    ["../assets/ffplayout.yml", "/usr/share/ffplayout/ffplayout.yml.orig", "644"],
    ["../assets/ffplayout.conf", "/usr/share/ffplayout/ffplayout.conf.example", "644"],
    ["../README.md", "/usr/share/doc/ffplayout/README", "644"],
    ["../public/**/*", "/usr/share/ffplayout/public/", "644"],
]
maintainer-scripts = "../debian/"
systemd-units = { enable = false, unit-scripts = "../assets" }

[package.metadata.deb.variants.arm64]
assets = [
    ["../target/aarch64-unknown-linux-gnu/release/ffpapi", "/usr/bin/", "755"],
    [
        "../target/aarch64-unknown-linux-gnu/release/ffplayout",
        "/usr/bin/",
        "755"
    ],
    ["../assets/ffpapi.service", "/lib/systemd/system/", "644"],
    ["../assets/ffplayout.service", "/lib/systemd/system/", "644"],
    ["../assets/ffplayout@.service", "/lib/systemd/system/", "644"],
    ["../assets/11-ffplayout", "/etc/sudoers.d/", "644"],
    ["../assets/ffplayout.yml", "/etc/ffplayout/", "644"],
    ["../assets/logo.png", "/usr/share/ffplayout/", "644"],
    ["../assets/ffplayout.yml", "/usr/share/ffplayout/ffplayout.yml.orig", "644"],
    ["../assets/ffplayout.conf", "/usr/share/ffplayout/ffplayout.conf.example", "644"],
    ["../README.md", "/usr/share/doc/ffplayout/README", "644"],
    ["../public/**/*", "/usr/share/ffplayout/public/", "644"],
]

# REHL RPM PACKAGE
[package.metadata.generate-rpm]
name = "ffplayout"
license = "GPL-3.0"
assets = [
    { source = "../target/x86_64-unknown-linux-musl/release/ffpapi", dest = "/usr/bin/ffpapi", mode = "755" },
    { source = "../target/x86_64-unknown-linux-musl/release/ffplayout", dest = "/usr/bin/ffplayout", mode = "755" },
    { source = "../assets/ffplayout.yml", dest = "/etc/ffplayout/ffplayout.yml", mode = "644", config = true },
    { source = "../assets/ffpapi.service", dest = "/lib/systemd/system/ffpapi.service", mode = "644" },
    { source = "../assets/ffplayout.service", dest = "/lib/systemd/system/ffplayout.service", mode = "644" },
    { source = "../assets/ffplayout@.service", dest = "/lib/systemd/system/ffplayout@.service", mode = "644" },
    { source = "../assets/11-ffplayout", dest = "/etc/sudoers.d/11-ffplayout", mode = "644" },
    { source = "../README.md", dest = "/usr/share/doc/ffplayout/README", mode = "644", doc = true },
    { source = "../LICENSE", dest = "/usr/share/doc/ffplayout/LICENSE", mode = "644" },
    { source = "../assets/logo.png", dest = "/usr/share/ffplayout/logo.png", mode = "644" },
    { source = "../assets/ffplayout.yml", dest = "/usr/share/ffplayout/ffplayout.yml.orig", mode = "644" },
    { source = "../assets/ffplayout.conf", dest = "/usr/share/ffplayout/ffplayout.conf.example", mode = "644" },
    { source = "../public/**/*", dest = "/usr/share/ffplayout/public/", mode = "644" },
    { source = "../debian/postinst", dest = "/usr/share/ffplayout/postinst", mode = "755" },
    { source = "../debian/postrm", dest = "/usr/share/ffplayout/postrm", mode = "755" },
]
auto-req = "no"
post_install_script = "/usr/share/ffplayout/postinst"
post_uninstall_script = "/usr/share/ffplayout/postrm"
