[package]
name = "ffplayout"
description = "24/7 playout based on rust and ffmpeg"
readme = "README.md"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

default-run = "ffplayout"

[dependencies]
ffplayout-lib = { path = "../lib" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.3", features = ["derive"] }
crossbeam-channel = "0.5"
futures = "0.3"
itertools = "0.12"
notify = "6.0"
notify-debouncer-full = { version = "*", default-features = false }
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = { version = "0.12", features = ["paris"] }
tiny_http = { version = "0.12", default-features = false }
zeromq = { version = "0.3", default-features = false, features = [
    "async-std-runtime",
    "tcp-transport",
] }

[[bin]]
name = "ffplayout"
path = "src/main.rs"

# DEBIAN DEB PACKAGE
[package.metadata.deb]
name = "ffplayout"
priority = "optional"
section = "net"
license-file = ["../LICENSE", "0"]
depends = ""
recommends = "sudo"
suggests = "ffmpeg"
copyright = "Copyright (c) 2022, Jonathan Baecker. All rights reserved."
conf-files = ["/etc/ffplayout/ffplayout.toml", "/etc/ffplayout/advanced.toml"]
assets = [
    [
        "../target/x86_64-unknown-linux-musl/release/ffpapi",
        "/usr/bin/",
        "755",
    ],
    [
        "../target/x86_64-unknown-linux-musl/release/ffplayout",
        "/usr/bin/",
        "755",
    ],
    [
        "../assets/ffpapi.service",
        "/lib/systemd/system/",
        "644",
    ],
    [
        "../assets/ffplayout.service",
        "/lib/systemd/system/",
        "644",
    ],
    [
        "../assets/ffplayout@.service",
        "/lib/systemd/system/",
        "644",
    ],
    [
        "../assets/11-ffplayout",
        "/etc/sudoers.d/",
        "644",
    ],
    [
        "../assets/advanced.toml",
        "/etc/ffplayout/",
        "644",
    ],
    [
        "../assets/ffplayout.toml",
        "/etc/ffplayout/",
        "644",
    ],
    [
        "../assets/logo.png",
        "/usr/share/ffplayout/",
        "644",
    ],
    [
        "../assets/ffplayout.toml",
        "/usr/share/ffplayout/ffplayout.toml.orig",
        "644",
    ],
    [
        "../assets/ffplayout.conf",
        "/usr/share/ffplayout/ffplayout.conf.example",
        "644",
    ],
    [
        "../README.md",
        "/usr/share/doc/ffplayout/README",
        "644",
    ],
    [
        "../assets/ffpapi.1.gz",
        "/usr/share/man/man1/",
        "644",
    ],
    [
        "../assets/ffplayout.1.gz",
        "/usr/share/man/man1/",
        "644",
    ],
]
maintainer-scripts = "../debian/"
systemd-units = { enable = false, unit-scripts = "../assets" }

[package.metadata.deb.variants.arm64]
assets = [
    [
        "../target/aarch64-unknown-linux-gnu/release/ffpapi",
        "/usr/bin/",
        "755",
    ],
    [
        "../target/aarch64-unknown-linux-gnu/release/ffplayout",
        "/usr/bin/",
        "755",
    ],
    [
        "../assets/ffpapi.service",
        "/lib/systemd/system/",
        "644",
    ],
    [
        "../assets/ffplayout.service",
        "/lib/systemd/system/",
        "644",
    ],
    [
        "../assets/ffplayout@.service",
        "/lib/systemd/system/",
        "644",
    ],
    [
        "../assets/11-ffplayout",
        "/etc/sudoers.d/",
        "644",
    ],
    [
        "../assets/ffplayout.toml",
        "/etc/ffplayout/",
        "644",
    ],
    [
        "../assets/advanced.toml",
        "/etc/ffplayout/",
        "644",
    ],
    [
        "../assets/logo.png",
        "/usr/share/ffplayout/",
        "644",
    ],
    [
        "../assets/ffplayout.toml",
        "/usr/share/ffplayout/ffplayout.toml.orig",
        "644",
    ],
    [
        "../assets/ffplayout.conf",
        "/usr/share/ffplayout/ffplayout.conf.example",
        "644",
    ],
    [
        "../README.md",
        "/usr/share/doc/ffplayout/README",
        "644",
    ],
    [
        "../assets/ffpapi.1.gz",
        "/usr/share/man/man1/",
        "644",
    ],
    [
        "../assets/ffplayout.1.gz",
        "/usr/share/man/man1/",
        "644",
    ],
]

# REHL RPM PACKAGE
[package.metadata.generate-rpm]
name = "ffplayout"
license = "GPL-3.0"
assets = [
    { source = "../target/x86_64-unknown-linux-musl/release/ffpapi", dest = "/usr/bin/ffpapi", mode = "755" },
    { source = "../target/x86_64-unknown-linux-musl/release/ffplayout", dest = "/usr/bin/ffplayout", mode = "755" },
    { source = "../assets/advanced.toml", dest = "/etc/ffplayout/advanced.toml", mode = "644", config = true },
    { source = "../assets/ffplayout.toml", dest = "/etc/ffplayout/ffplayout.toml", mode = "644", config = true },
    { source = "../assets/ffpapi.service", dest = "/lib/systemd/system/ffpapi.service", mode = "644" },
    { source = "../assets/ffplayout.service", dest = "/lib/systemd/system/ffplayout.service", mode = "644" },
    { source = "../assets/ffplayout@.service", dest = "/lib/systemd/system/ffplayout@.service", mode = "644" },
    { source = "../assets/11-ffplayout", dest = "/etc/sudoers.d/11-ffplayout", mode = "644" },
    { source = "../README.md", dest = "/usr/share/doc/ffplayout/README", mode = "644" },
    { source = "../assets/ffpapi.1.gz", dest = "/usr/share/man/man1/ffpapi.1.gz", mode = "644", doc = true },
    { source = "../assets/ffplayout.1.gz", dest = "/usr/share/man/man1/ffplayout.1.gz", mode = "644", doc = true },
    { source = "../LICENSE", dest = "/usr/share/doc/ffplayout/LICENSE", mode = "644" },
    { source = "../assets/logo.png", dest = "/usr/share/ffplayout/logo.png", mode = "644" },
    { source = "../assets/ffplayout.toml", dest = "/usr/share/ffplayout/ffplayout.toml.orig", mode = "644" },
    { source = "../assets/ffplayout.conf", dest = "/usr/share/ffplayout/ffplayout.conf.example", mode = "644" },
    { source = "../debian/postinst", dest = "/usr/share/ffplayout/postinst", mode = "755" },
]
auto-req = "no"
post_install_script = "/usr/share/ffplayout/postinst"
