[package]
name = "tests"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dev-dependencies]
ffplayout = { path = "../engine" }

actix-web = "4"
actix-web-grants = "4"
actix-web-httpauth = "0.8"
actix-rt = "2.10"
actix-test = "0.1"
chrono = "0.4"
crossbeam-channel = "0.5"
ffprobe = "0.4"
file-rotate = "0.7.0"
lettre = { version = "0.11", features = ["builder", "rustls-tls", "smtp-transport"], default-features = false }
log = "0.4"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.0"
shlex = "1.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.29", features = ["full"] }
toml_edit = {version ="0.22", features = ["serde"]}
walkdir = "2"

[[test]]
name = "api_routes"
path = "src/api_routes.rs"

[[test]]
name = "utils"
path = "src/utils.rs"

[[test]]
name = "engine_playlist"
path = "src/engine_playlist.rs"

[[test]]
name = "engine_cmd"
path = "src/engine_cmd.rs"

[[test]]
name = "engine_generator"
path = "src/engine_generator.rs"
