[package]
name = "tests"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dev-dependencies]
ffplayout = { path = "../engine" }

actix-web = "4"
actix-test = "0.1"
chrono = "0.4"
serde_json = "1.0"
serial_test = "3.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.29", features = ["full"] }

[[test]]
name = "api_routes"
path = "src/api_routes.rs"

[[test]]
name = "utils"
path = "src/utils.rs"

[[test]]
name = "engine_playlist"
path = "src/engine_playlist.rs"

[[test]]
name = "engine_cmd"
path = "src/engine_cmd.rs"

[[test]]
name = "engine_filter"
path = "src/engine_filter.rs"

[[test]]
name = "engine_generator"
path = "src/engine_generator.rs"
