[package]
name = "tests"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dev-dependencies]
ffplayout = { path = "../backend/app", default-features = false, features = [
    "embed_frontend",
] }

axum = "0.8"
chrono = "0.4"
serde_json = "1.0"
serial_test = "3.0"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.29", features = ["full"] }
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }

[[test]]
name = "api_routes"
path = "src/api_routes.rs"

[[test]]
name = "utils"
path = "src/utils.rs"

[[test]]
name = "engine_playlist"
path = "src/engine_playlist.rs"

[[test]]
name = "engine_generator"
path = "src/engine_generator.rs"
